# Stop_Line_Detect

./: README.md
aruco_msgs/: CMakeLists.txt
aruco_msgs/msg/: multi_msg.msg
aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/launch/: get_marker.launch
aruco_ros/src/: get_marker.cpp
